--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <title>Boy Girl Fruit Flower</title>
 </head>
-<style> table { width:100%;
-border-collapse: collapse;}
-th td { border: 1px solid #ddd;
-padding: 8px;
-text-align: center;}
-th { background-color: #f2f2f2;}
-td:focus { outline:none;
-            background-color: #e0f7fa;}
-    </style>
+
 <body>
     <table id="editableTable">
         <thead><tr>
@@ -29,6 +21,9 @@ td:focus { outline:none;
             <th>Score</th>
             </tr></thead>
             <tbody></tbody>
-    </table><script src="./BoyGirlFruitFlower.js"></script>
+            <button id="generateLetterBtn">Generate Random Letter</button>
+            <p id="randomLetterDisplay"></p>
+   <script src="./BoyGirlFruitFlower.js"></script>
+    
 </body>
 </html>
